# wss_tmpl_serve

./: .env.template  .gitignore  .ignore  Cargo.toml  GEMINI.md  mod.nu
inject_scripts/: console-override.js  hmr-client.js
project/: index.html  main.css  main.js
project/n/: n.js  n.ts  nj.js
scripts/: mod.nu
src/: main.rs  watcher.rs
src/cmd/: error.rs  mod.rs  nu.rs
src/http/: routes.rs
src/ws/: connection.rs
web/: k.js  main.css  main.html  main.js
web/src/: lib.js  sh.js
web/src/broadcast/: mod.js
web/src/components/: context-menu.js  mod.js  overwrite-confirm-modal.js  prompt.js  save-as-modal.js
web/src/console/: console.js  mod.js
web/src/editor/: completions.js  editor.js  keymaps.js  mod.js
web/src/editor/plugins/: codelens.js  language_switcher.js
web/src/editor/plugins/lang/: nushell.esm.js
web/src/editor/pme/: README.md  pme.mod.js
web/src/editor/pme/chunks/: d.pme.js  dockerfile.pme.js  erlang.pme.js  factor.pme.js  index.pme.js  index.pme2.js  index.pme3.js  index.pme4.js  mod.pme.js  nsis.pme.js  pug.pme.js  stylus.pme.js
web/src/editor/pme/lezer/: common.js  highlight.js
web/src/editor/pme/src/: mod.d.mts
web/src/editor/themes/: gruvbox-dark.js  gruvbox-light.js  material-dark.js  nord.js
web/src/lib/: event.js
web/src/net/: mod.js  ws.js
web/src/preview/: injected_hym_client.js  mod.js  preview.js
web/src/tabs/: tabs.css  tabs.js
web/src/terminal/: mod.js  terminal.js  ws_connection.js
web/src/tree-view/: file-explorer.js  mod.js  tree-view.js
web/src/workspace/: workspace.js
(+6 files in other folders)
