[package]
name = "wss_serve"
description = "http/ws server & cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-lab = "0.24"
actix-ws = "0.2"
actix-files = "0.6.6"
rmp-serde = "1.1"
serde = { version = "1.0.219", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
bytes = "1.10.1"
dotenv = "0.15"
